--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,8 @@
 name: Run Tests
 
 on:
+  schedule:
+    - cron: "0 10 * * 1"
   push:
     branches:
       - master
@@ -10,7 +12,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
