--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,16 +18,20 @@ jobs:
     - uses: actions/checkout@v1
     - name: Generate project
       run: npx create-react-app tmp --template file:.
+    - name: Run tests on default project
+      run: |
+        cd tmp
+        CI=true yarn test
     - name: Use plop
       run: |
         cd tmp
         yarn plop component test ./src/shared/components
         yarn plop module test
         yarn plop hook test ./src/shared/components
-    - name: Run tests
+    - name: Run tests with snapshots update
       run: |
-        cd tmp
-        CI=true yarn test
+        cd temp
+        CI=true yarn test -u
     - name: Build
       run: |
         cd tmp
