--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Use plop
       run: |
         cd tmp
-        yarn plop component test ./src/shared/components
+        yarn plop component test /shared/components
         yarn plop module test
-        yarn plop hook test ./src/shared/components
+        yarn plop hook test /shared/components
     - name: Run tests with snapshots update
       run: |
         cd tmp
