--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -39,7 +39,12 @@
     }],
     "import/newline-after-import": ["error", { "count": 1 }],
     "prettier/prettier": "error",
-    "import/extensions": ["error", "ignorePackages", {"js": "never"}],
+    "import/extensions": ["error", "ignorePackages", {
+      "js": "never",
+      "jsx": "never",
+      "ts": "never",
+      "tsx": "never"
+    }],
     "import/dynamic-import-chunkname": 0,
     "react/jsx-filename-extension": 0,
     "@typescript-eslint/ban-ts-ignore": 0,
