--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         cd tmp
         CI=true yarn test
+    - name: Build storybook
+      run: |
+        cd tmp
+        yarn build-storybook
     - name: Use plop
       run: |
         cd tmp
