--- a/template/.env
+++ b/template/.env
@@ -1,4 +1,1 @@
-REACT_APP_BASE_API_URL = 'http://localhost:4000'
-SKIP_PREFLIGHT_CHECK = true
-EXTEND_ESLINT = true
-NODE_PATH=src/shared
+REACT_APP_BASE_API_URL = '/api'
